# filters application to storage layer # description pattern in ItemListServlet # delete integration tests

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 
   <servlet>
     <servlet-name>ItemListServlet</servlet-name>
-    <servlet-class>carsale.servlet.ItemListServlet</servlet-class>
+    <servlet-class>carsale.servlet.itemlist.ItemListServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>ItemListServlet</servlet-name>
